# pySATEN-mirror

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pymarkdown.yaml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py  src.py
pysaten/: __init__.py  pysaten.py
pysaten/v2/: __init__.py
src/: pysaten.py
src/pysaten/: __init__.py  _signal.py  pysaten.py
src/pysaten/lv1/: __init__.py  pysaten.py
src/pysaten/utility/: WavLabHandler.py  color_noise.py  signal.py
src/pysaten/v1/: __init__.py
src/pysaten/v2/: __init__.py
test/: pysaten.py  test.py  test_-5.csv  test_0.csv  test_10.csv  test_15.csv  test_20.csv  test_5.csv  test_analysys.py  test_result.csv  tuning.py  tuning1.py  tuning2.py  tuning_result1.csv  tuning_result2.csv  utils.py
test/lv1/: requirements-linux.txt  test_analysys.py  tuning2.py
test/pysaten/: pysaten.py
tools/: README.md
tools/graph/: RMS.py
tools/lv1/: speed_test.py  test.py  tuning1.py  tuning2.py
tools/lv1/marblenet/: marblenet.py
tools/lv1/test_result/: test_-inf.csv  test_5.csv  test_inf.csv
tools/v1/: README.md  speed_test.py  test.py  test_analysys.py  test_result.csv  tuning1.py  tuning2.py
tools/v1/marblenet/: marblenet.py
tools/v1/test_result/: test_-5.csv  test_-inf.csv  test_0.csv  test_10.csv  test_15.csv  test_20.csv  test_5.csv
tools/v1/test_result_of_v140/: test_10.csv  test_inf.csv
tools/v2/: README.md  _ZCR_graph.py  _get_phoneme_length.py  debug.py  eval.py  eval_analysys.py  eval_analysys_pulse.py  eval_pulse.py  marblenet  pink_result.md  pulse_result.md  test.py  test_analysys.py  test_analysys_pulse.py  test_by_tuning_data.py  test_pulse.py  tuning.py  wav_and_lab  white_result.md
tools/v2/my_webrtcvad/: __init__.py
tools/v2/results/: pink_-5.csv  pink_-inf.csv  pink_0.csv  pink_10.csv  pink_15.csv  pink_20.csv  pink_5.csv  pink_inf.csv  white_-5.csv  white_-inf.csv  white_0.csv  white_10.csv  white_15.csv  white_20.csv  white_5.csv  with_pulse.csv  without_pulse.csv
tools/v2/test_result/: pink_-5.csv  pink_-inf.csv  pink_0.csv  pink_10.csv  pink_15.csv  pink_20.csv  pink_5.csv  pink_inf.csv  white_0.csv  white_15.csv  white_20.csv  white_5.csv
