[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pysaten"
description = "Detect silence segment from speech signal."
version = "2.0.3"
authors = [
    {name = "Fumiyoshi MATANO", email = "fumiyoshi.matano@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",  # for numpy.typing
    "noisereduce",
    "librosa",
    "soundfile",  # for cli_runner
    "scipy",
    "torch>=1.7"  # for torch.fft
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[project.urls]
Repository = "https://gitlab.com/f-matano44/pysaten.git"

[project.scripts]
pysaten_trim = "pysaten.pysaten:cli_runner"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.3"
pandas = "^2.2.3"
tqdm = "^4.67.1"
torch = {version = "^2.7.1", source = "torch_cpu"}
torchaudio = {version = "^2.7.1", source = "torch_cpu"}
inaspeechsegmenter = {version = "^0.8.0", markers = "sys_platform == 'linux'"}
nemo-toolkit = {version = "^2.4.0", extras = ["asr"], markers = "sys_platform == 'linux'"}
silero-vad = {version = "^6.0.0", markers = "sys_platform == 'linux'"}
rvadfast = {version = "^0.0.5", markers = "sys_platform == 'linux'"}

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true
