[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pysaten"
description = "Detect silence segment from speech signal."
version = "2.1.1.post2"
authors = [
    {name = "Fumiyoshi MATANO", email = "fumiyoshi.matano@gmail.com"}
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy>=1.20",  # for numpy.typing
    "noisereduce",
    "librosa",
    "soundfile",  # for cli_runner
    "scipy",
    "torch>=2, <2.9"  # for torch.fft, torchaudio
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[project.urls]
Repository = "https://gitlab.com/f-matano44/pysaten.git"

[project.scripts]
pysaten_trim = "pysaten.pysaten:cli_runner"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.3"
pandas = "^2.2.3"
tqdm = "^4.67.1"

[tool.poetry.group.eval]
optional = true
[tool.poetry.group.eval.dependencies]
inaspeechsegmenter = "^0.8.0"
silero-vad = "^6.0.0"
rvadfast = "^0.0.5"
whisperx = "^3.4.2"
speechbrain = "^1.0.3"
webrtcvad = "^2.0.10"
setuptools = "<81"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
