[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "pysaten"
description = "Detect silence segment from speech signal."
version = "2.2.1"
authors = [
    {name = "Fumiyoshi MATANO", email = "fumiyoshi.matano@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",  # for numpy.typing
    "noisereduce",
    "librosa",
    "soundfile",  # for cli_runner
    "scipy",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[project.urls]
Repository = "https://gitlab.com/f-matano44/pysaten.git"

[project.scripts]
pysaten_trim = "pysaten.pysaten:cli_runner"

[dependency-groups]
dev = [
    "matplotlib>=3.10.3,<4",
    "pandas>=2.2.3,<3",
    "tqdm>=4.67.1,<5",
]

eval = [
    "torch<2.9",
    "torchaudio<2.9",
    "inaspeechsegmenter>=0.8.0,<0.9",
    "silero-vad>=6.0.0,<7",
    "rvadfast>=0.0.5,<0.0.6",
    "whisperx>=3.4.2,<4",
    "speechbrain>=1.0.3,<2",
    "webrtcvad>=2.0.10,<3",
    "setuptools<81",
]

[[tool.uv.index]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "torch_cpu" }
torchaudio = { index = "torch_cpu" }

[tool.uv.dependency-groups]
eval = {requires-python = "<3.13"}

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
